[project]
name = "group-telegram-with-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Santos Silva",email = "luss1010@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram (>=3.19.0,<4.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "scheduler (>=0.8.8,<0.9.0)",
    "nostr-sdk (>=0.40.1,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
